# 2_regex_query_tool

./: Makefile  pyproject.toml
project/: forms.py  settings.py  urls.py  views.py
templates/: base.html  index.html
